--- a/assets/bdd/config.json
+++ b/assets/bdd/config.json
@@ -4,7 +4,7 @@
         "hauteurColonnes":"5",
         "complexite":"2",
         "voix": "garçon",
-        "recherche": "oui"
+        "recherche": "non"
     },
     "colonnes" : [
         "Phrases",
@@ -15,13 +15,13 @@
         "Maths",
         "Decrire",
         "Lieux",
-        "",
+        "Aliments",
         ""
     ],
     "largeurColonnes": [
         "1",
         "1",
-        "3",
+        "2",
         "1",
         "1",
         "1",
@@ -35,7 +35,7 @@
         "Moments",
         "Animaux",
         "Mots",
-        "Personnages",
+        "Sport",
         "",
         "",
         "",
